# aichat

./: .gitignore  Readme.md  Reamd.md  main.py  pyproject.toml  setup.py
aichat/: __init__.py  server.py
aichat/static/: client.js  index.html
