[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aichat"
version = "0.1.0"
description = "WebRTC server for AI chat with audio/video recording"
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.10.1",
    "aiohttp>=3.8.0",
    "opencv-python-headless>=4.5.0",
]
